--- a/chiliChallenge/Base.lproj/Main.storyboard
+++ b/chiliChallenge/Base.lproj/Main.storyboard
@@ -63,6 +63,7 @@
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ai4-86-MLn">
                                 <rect key="frame" x="0.0" y="35" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
                                     <navigationItem title="Welcome to Chili's!" id="syK-l1-rfF"/>
                                 </items>
