--- a/chiliChallenge/Base.lproj/Main.storyboard
+++ b/chiliChallenge/Base.lproj/Main.storyboard
@@ -15,9 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ai9-pD-TPa">
-                                <rect key="frame" x="233" y="1232" width="558" height="114"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ai9-pD-TPa">
+                                <rect key="frame" x="412" y="1232" width="200" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="GZz-gT-hoX"/>
+                                    <constraint firstAttribute="height" constant="114" id="xld-O1-N0R"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="56"/>
                                 <state key="normal" title="SUBMIT"/>
                                 <connections>
@@ -32,12 +35,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xe4-lh-H9O">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xe4-lh-H9O">
                                 <rect key="frame" x="0.0" y="207" width="1024" height="1017"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="31" indentationWidth="0.0" reuseIdentifier="cell" textLabel="PvN-o7-Lbf" rowHeight="83" style="IBUITableViewCellStyleDefault" id="gPE-H0-vZ7">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="31" indentationWidth="0.0" reuseIdentifier="cell" textLabel="PvN-o7-Lbf" detailTextLabel="ac0-N9-bVG" rowHeight="83" style="IBUITableViewCellStyleValue1" id="gPE-H0-vZ7">
                                         <rect key="frame" x="0.0" y="28" width="1024" height="83"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gPE-H0-vZ7" id="35t-tk-HSB" customClass="UINavigationBar">
@@ -45,7 +47,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PvN-o7-Lbf">
-                                                    <rect key="frame" x="15" y="0.0" width="975" height="83"/>
+                                                    <rect key="frame" x="15" y="32" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ac0-N9-bVG">
+                                                    <rect key="frame" x="946" y="32" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -57,20 +66,38 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ai4-86-MLn">
-                                <rect key="frame" x="0.0" y="35" width="1024" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ai4-86-MLn">
+                                <rect key="frame" x="0.0" y="35" width="1024" height="50"/>
                                 <color key="barTintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
                                     <navigationItem title="Welcome to Chili's!" id="syK-l1-rfF"/>
                                 </items>
                             </navigationBar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="40H-EK-eeY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="40H-EK-eeY">
                                 <rect key="frame" x="396" y="88" width="233" height="111"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="111" id="3Ua-V3-cL6"/>
+                                    <constraint firstAttribute="width" constant="233" id="LL6-8a-gwe"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xe4-lh-H9O" firstAttribute="top" secondItem="40H-EK-eeY" secondAttribute="bottom" constant="8" id="55E-Dq-hIO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="40H-EK-eeY" secondAttribute="trailing" constant="395" id="5tP-qj-oLi"/>
+                            <constraint firstItem="ai4-86-MLn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="DOt-7B-Rou"/>
+                            <constraint firstItem="ai4-86-MLn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Orq-3R-vt5"/>
+                            <constraint firstItem="xe4-lh-H9O" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XvO-MV-PwA"/>
+                            <constraint firstItem="xe4-lh-H9O" firstAttribute="top" secondItem="40H-EK-eeY" secondAttribute="bottom" constant="8" id="Y1y-tg-vns"/>
+                            <constraint firstItem="ai9-pD-TPa" firstAttribute="top" secondItem="xe4-lh-H9O" secondAttribute="bottom" constant="8" id="d3h-90-Utw"/>
+                            <constraint firstItem="ai9-pD-TPa" firstAttribute="top" secondItem="xe4-lh-H9O" secondAttribute="bottom" constant="8" id="dql-ib-K8z"/>
+                            <constraint firstItem="40H-EK-eeY" firstAttribute="top" secondItem="ai4-86-MLn" secondAttribute="bottom" constant="9" id="mEo-mQ-iVA"/>
+                            <constraint firstItem="ai9-pD-TPa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ou0-dq-pLC"/>
+                            <constraint firstItem="40H-EK-eeY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="396" id="pHD-Uv-ENj"/>
+                            <constraint firstItem="40H-EK-eeY" firstAttribute="top" secondItem="ai4-86-MLn" secondAttribute="bottom" constant="3" id="qGB-OE-EUW"/>
+                            <constraint firstItem="xe4-lh-H9O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xDN-yp-pKx"/>
+                            <constraint firstItem="ai4-86-MLn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xvy-pC-jln"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
